--- a/todo
+++ b/todo
@@ -1,10 +1,11 @@
-# Add decision tree functions
 # Make parameters definition check that group names are not reused also as strategy names
 # Replace namespace with something simpler
 # - Evaluate everything into environments
 # - Check that anything referencing state/model time is a vector of right length
 # Consider memoization
 # Pull variables from excel workbooks based on named ranges
+# Figure out how to handle dependencies of trees (state time!)
+# Set attributes on functions to create runtime dependencies?
 # Find and update ###TECHDEBT###
 
 http://jiarubai.net/slides/mdt.pdf
