--- a/todo
+++ b/todo
@@ -3,9 +3,10 @@
 # - Evaluate everything into environments
 # - Check that anything referencing state/model time is a vector of right length
 # Consider memoization
-# Setup a negation operator for decision trees
-# - Use `-` because it has low precedence
-# - User `interp` to replace `-` with the negate function in the lazy objects.
+# Create a function to calculate expected values from trees
+# Add variables at tree nodes
+# Automatic collapsing of state-time is a no-go, need to properly propagate references to state_time!!
+#   Need to figure out how to do this w/ decision trees!!!
 # Pull variables from excel workbooks based on named ranges
 # Figure out how to handle dependencies of trees (state time!)
 # Set attributes on functions to create runtime dependencies?
